# Scaffold-Stellar-Orion-Server

./: .env.example  .eslintignore  ARCHITECTURE_GAP_ANALYSIS.md  AUTO_REPAY_BOT_SPEC.md  BACKEND_FINAL_REQUIREMENTS.md  BACKEND_INTEGRATION_GUIDE.md  BACKEND_REQUIREMENTS.md  BACKEND_SUMMARY.md  BOT_MANAGEMENT.md  BOT_MIGRATION_COMPLETE.md  BOT_MULTI_ASSET_COMPATIBILITY_REPORT.md  BOT_STARTUP_GUIDE.md  COMPLETE_SYSTEM_INTEGRATION.md  CONTRACT_API_REFERENCE.md  Cargo.toml  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_QUICKSTART.md  DEPLOYMENT_SNAPSHOT.md  DISABLE_LINT_GUIDE.md  FEATURE_VERIFICATION_REPORT.md  FLOW_COMPARISON.md  FRONTEND_CHANGES.md  FRONTEND_INTEGRATION.md  FRONTEND_STAKING_GUIDE.md  Frontend_done.md  GEMINI.md  IMPLEMENTATION_OPTIONS.md  IMPLEMENTATION_PLAN.md  INTEGRATION_COMPLETE.md  LIQUIDATION_BOT_SPEC.md  MOCK_MULTI_ASSET_IMPLEMENTATION.md  MULTI_ASSET_VERIFICATION.md  ORACLE_BOT_SPEC.md  ORACLE_FIX_COMPLETE.md  ORION_FRONTEND_INTEGRATION.md  PROFILE_REDESIGN_PLAN.md  QUICK_START.md  README.md  STAKING_ISSUE_ANALYSIS.md  SYSTEM_INTEGRATION.md  (+19 more)
.github/workflows/: node.yml
bots/auto-repay-bot/: .env.example  VERIFICATION_REPORT.md  package-lock.json  package.json
bots/liquidation-bot/: .env.example  README.md  VERIFICATION_REPORT.md  package-lock.json  package.json  tsconfig.json
bots/oracle-price-bot/: .env.example  README.md  REVIEW_ANALYSIS.md  package.json  (+2 more)
contracts/: deployed-addresses.json
contracts/mock-rwa-token/: Cargo.toml
contracts/mock-rwa-token/src/: contract.rs  test.rs
contracts/rwa-vault/: Cargo.toml
contracts/rwa-vault/src/: contract.rs  test.rs
contracts/strwa-token/: Cargo.toml
contracts/strwa-token/src/: contract.rs  test.rs
frontend-sdk/: README.md  package.json
scripts/: deploy.sh  initialize.sh  validate-integration.ts
src/: main.tsx
(+169 files in other folders)
