[package]
name = "mock-rwa-token"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk.workspace = true
stellar-tokens.workspace = true
stellar-macros.workspace = true
stellar-access.workspace = true  # For access control

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]